my_realtime_vdoslam builds ok now

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ ros_numpy/
 vision_msgs/
 zed-ros-wrapper/
 image_view/
+
+devel/
+logs/
+build/
+bin/
+lib/
+
+
+.vscode/
+
+**/mask_rcnn/build/*
+**/mask_rcnn/dist/*
+**/mask_rcnn/assets
+**/mask_rcnn/*.egg-info
+**/mask_rcnn/data/*
