--- a/my_realtime_vdo_slam/CMakeLists.txt
+++ b/my_realtime_vdo_slam/CMakeLists.txt
@@ -101,17 +101,15 @@ add_library(${PROJECT_NAME} SHARED
 	src/visualizer/RosAsyncManager.cpp
   src/tracking/HungarianSolver.cpp
 	src/tracking/SemanticTracker.cpp
+  src/CameraInformation.cpp
 )
-# if(${vdo_slam_LIB_DIRS})
-#   message(status "I am LIB_DIRS")
-# else()
-#   message(status "I am not LIB_DIRS")
-# endif()
+
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
 		${catkin_LIBRARIES}
 		${OpenCV_LIBS}
 		${vdo_slam_LIBRARIES}
+    
 )
 # if(catkin_EXPORTED_LIBRARIES)
 #   add_dependencies(${PROJECT_NAME}
@@ -137,6 +135,7 @@ target_link_libraries(ros_vdoslam_node
   ${catkin_LIBRARIES}
   ${OpenCV_LIBS}
   ${PROJECT_NAME}
+  -lvdo_slam
   )
 
 if(catkin_EXPORTED_LIBRARIES)
@@ -147,75 +146,7 @@ if(catkin_EXPORTED_LIBRARIES)
       )
 endif()
 
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
-
-#############
-## Install ##
-#############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_my_realtime_vdo_slam.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
 
 
 install(TARGETS ros_vdoslam_node 
