--- a/synchronizer/CMakeLists.txt
+++ b/synchronizer/CMakeLists.txt
@@ -18,12 +18,9 @@ find_package(catkin REQUIRED COMPONENTS
   actionlib_msgs
   mask_rcnn
   vision_msgs
+  my_realtime_vdo_slam
 )
 find_package(OpenCV)
-
-
-
-
 
 
 
@@ -54,10 +51,18 @@ generate_messages(
   mask_rcnn
 )
 
+set(PROJECT_INCLUDE_DIRS
+  include
+  ${catkin_INCLUDE_DIRS}
+  )
+
+include_directories(
+  ${PROJECT_INCLUDE_DIRS}
+)  
 
 catkin_package(
-  INCLUDE_DIRS #include
-#  LIBRARIES synchronizer
+  INCLUDE_DIRS ${PROJECT_INCLUDE_DIRS}
+  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS 
   cv_bridge 
   image_transport 
@@ -69,33 +74,55 @@ catkin_package(
   message_runtime
   mask_rcnn
   vision_msgs
+  my_realtime_vdo_slam
 #  DEPENDS system_lib
 )
 
 ###########
 ## Build ##
 ###########
-
+add_library(${PROJECT_NAME} SHARED
+  src/my_Synchronizer.cpp
+)
+target_link_libraries(${PROJECT_NAME} PUBLIC
+  ${catkin_LIBRARIES}
+)
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/synchronizer.cpp)
-target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${OpenCV_LIBS})
-add_dependencies(${PROJECT_NAME}_node synchronizer_generate_messages_cpp)
+add_executable(${PROJECT_NAME}_node 
+  src/synchronizer_node.cpp
+)
+
+target_link_libraries(${PROJECT_NAME}_node 
+  ${catkin_LIBRARIES} 
+  ${OpenCV_LIBS}
+  ${PROJECT_NAME}
+)
+add_dependencies(${PROJECT_NAME}_node 
+  # synchronizer_generate_messages_cpp
+  ${catkin_EXPORTED_TARGETS}
+)
+
+
 #############
-## Testing ##
+## Install ##
 #############
 
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_synchronizer.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
+install(TARGETS ${PROJECT_NAME}_node 
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+install(TARGETS ${PROJECT_NAME}
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY include/${PROJECT_NAME}/
+        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
